# streaming-practice

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  format.sh
data-sets/: airports.ini  departures.ics
includes/: Airport.hpp  Departure.hpp  Parsers.hpp  helpers.hpp
src/: Airport.cpp  Departure.cpp  Parsers.cpp  helpers.cpp  main.cpp
